# Enterprise-GenAI-RAG-Knowledge-Assistant-

./: README.md
enterprise-rag-assistant/: main.py  pyproject.toml  run.py
enterprise-rag-assistant/src/api/: app.py
enterprise-rag-assistant/src/core/: rag_engine.py
enterprise-rag-assistant/src/ui/: app.py
